<resources>
    <string name="app_name">tuosha</string>
    <string name="card_text">信用卡页面</string>
    <string name="art_type_0">如何入会</string>
    <string name="art_type_1">视频技术</string>
    <string name="art_type_2">新手专区</string>
    <string name="art_type_3">达人交流圈</string>
    <string name="art_type_4">历史黑科技</string>
    <string name="art_type_5">经验神坛</string>
    <string name="art_type_6">金融工具</string>
    <string name="art_type_7">额度查询</string>
    <!-- Strings related to kouzi -->
    <string name="kouzi_type_0">大额借贷</string>
    <string name="kouzi_type_1">工薪贷</string>
    <string name="kouzi_type_2">身份证贷</string>
    <string name="kouzi_type_3">淘宝贷</string>
    <string name="kouzi_type_4">小额贷款</string>
    <string name="kouzi_type_5">信用卡贷</string>
    <string name="kouzi_type_6">学子分期</string>
    <string name="kouzi_type_7">更多</string>
    <!-- Strings related to card -->
    <string name="card_type_0">快速提额</string>
    <string name="card_type_1">银行贷款</string>
    <string name="card_type_2">进度查询</string>
    <string name="center_about">CenterAbout</string>
    <!-- Strings related to login -->
    <string name="prompt_phone">请输入手机号</string>
    <string name="prompt_username">请输入用户电话号码</string>
    <string name="prompt_password">请输入密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register">注册</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login_activity_dialog_confirm_exit_message">您确实要退出吗？</string>
    <string name="login_activity_dialog_ok_button">确定</string>
    <string name="login_activity_dialog_cancel_button">取消</string>


    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
</resources>
