<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/gray"
    tools:context=".LoginActivity">


            <ImageView
                android:layout_width="100dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/logo"/>

    <com.example.tuosha.ClearEditText
        android:id="@+id/username"
        android:layout_width="266dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="@drawable/translucent"
        android:drawableLeft="@drawable/account"
        android:hint="@string/prompt_username"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true"
        android:textSize="14sp" />


    <com.example.tuosha.ClearEditText
        android:id="@+id/password"
        android:layout_width="266dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="@drawable/translucent"
        android:drawableLeft="@drawable/lock"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:textSize="14sp" />

            <Button
                android:id="@+id/sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="267dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:background="#214A7D"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/register_button"
                style="?android:textAppearanceSmall"
                android:layout_width="267dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:background="#EA517F"
                android:text="@string/register"
                android:textStyle="bold"
                android:textColor="@color/white"/>

</LinearLayout>