<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--轮播图-->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="180dp" >

        <android.support.v4.view.ViewPager
            android:id="@+id/cardpic"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="15dip"
            android:layout_gravity="bottom"
            android:background="#33000000"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@android:color/white" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dip"
                android:orientation="horizontal" >

                <View
                    android:id="@+id/dot_0"
                    android:layout_width="5dip"
                    android:layout_height="5dip"
                    android:layout_marginLeft="2dip"
                    android:layout_marginRight="2dip"
                    android:background="@drawable/point_selector"/>

                <View
                    android:id="@+id/dot_1"
                    android:layout_width="5dip"
                    android:layout_height="5dip"
                    android:layout_marginLeft="2dip"
                    android:layout_marginRight="2dip"
                    android:background="@drawable/point_selector"/>
                <View
                    android:id="@+id/dot_2"
                    android:layout_width="5dip"
                    android:layout_height="5dip"
                    android:layout_marginLeft="2dip"
                    android:layout_marginRight="2dip"
                    android:background="@drawable/point_selector"/>


            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
    <!--轮播图end-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lunpic"
        android:orientation="vertical">
        <!--文章分类图标区域-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/th1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView0"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/quick_option_album_nor"
                android:padding="8dp"
                android:maxLines="1"
                android:textAlignment="center"

                android:text="@string/card_type_0" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/quick_option_note_nor"
                android:text="@string/card_type_1"
                android:padding="8dp"
                android:maxLines="1"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/quick_option_photo_nor"
                android:padding="8dp"
                android:textAlignment="center"
                android:maxLines="1"
                android:text="@string/card_type_2" />


        </LinearLayout>
        <!--文章分类图标区域-end-->
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#d9d9d9"/>
        <!--文章item-->

            <ListView
                android:id="@+id/lv_card"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />

        <!--文章item-end-->
    </LinearLayout>
    <!--文章end-->
</LinearLayout>